--- a/Project.CoreMVC/Views/_ViewImports.cshtml
+++ b/Project.CoreMVC/Views/_ViewImports.cshtml
@@ -1,4 +1,8 @@
 ﻿@using Project.CoreMVC
 @using Project.CoreMVC.Models
 @using Project.CoreMVC.Models.AppUsers
+@using Project.ENTITIES.Models
+@using Project.CoreMVC.Models.PageVms
+@using X.PagedList;
+@using X.PagedList.Mvc.Core;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
