--- a/Project.CoreMVC/Views/_ViewImports.cshtml
+++ b/Project.CoreMVC/Views/_ViewImports.cshtml
@@ -5,4 +5,6 @@
 @using Project.CoreMVC.Models.PageVms
 @using X.PagedList;
 @using X.PagedList.Mvc.Core;
+@using Project.CoreMVC.Models.ShoppingTools
+@using Project.CoreMVC.Models.Orders
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
